<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainActivityLoginTitle"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:layout_above="@id/mainActivityErrorTextView"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/mainActivityErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_above="@id/mainActivityFullnameEditText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/mainActivityFullnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_box_grey_background"
        android:hint="@string/mainActivityFullnameHint"
        android:layout_marginBottom="15dp"
        android:layout_above="@id/mainActivityEmailEditText"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/mainActivityEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mainActivityEmailHint"
        android:textColorHint="@color/white"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_box_grey_background"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/mainActivityPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mainActivityPasswordHint"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_box_grey_background"
        android:layout_below="@id/mainActivityEmailEditText"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/mainActivityCreateAnAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainActivityPasswordEditText"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:gravity="right"
        android:text="@string/mainActivityCreateAnAccountTitle"/>

    <TextView
        android:id="@+id/mainActivityForgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainActivityCreateAnAccountTextView"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:gravity="right"
        android:text="@string/mainActivityForgotPassword"/>

    <Button
        android:id="@+id/mainActivityRegisterLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainActivityLoginTitle"
        android:background="@drawable/rounded_box_blue_background"
        android:layout_below="@+id/mainActivityForgotPasswordTextView"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>