<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/passwordResetActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordResetActivityTitle"
        android:textColor="@color/white"
        android:gravity="left"
        android:paddingBottom="10dp"
        android:layout_above="@id/passwordResetActivityErrorTextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/passwordResetActivityErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_above="@id/passwordResetActivityEnterEmailEditText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordResetActivityEnterEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordResetActivityEnterEmailHint"
        android:textColorHint="@color/white"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_box_grey_background"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/passwordResetActivitySendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordResetActivitySendButton"
        android:background="@drawable/rounded_box_blue_background"
        android:layout_below="@+id/passwordResetActivityEnterEmailEditText"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>